--- a/app/views/greetings/hello.html.erb
+++ b/app/views/greetings/hello.html.erb
@@ -1,4 +1,7 @@
 <h1>Greetings#hello</h1>
 <p><%= @message %></p>
-<a href="http://www.gucas.ac.cn">UCAS</a>
+<a href="http://www.gucas.ac.cn">Enter UCAS</a>
+<h1>The time is:</h1>
 <p><%= @time %></p>
+<a href="/summer/xia">exit</a>
+<a href="/high_scores">enter database</a>
