--- a/app/views/summer/xia.html.erb
+++ b/app/views/summer/xia.html.erb
@@ -1,3 +1,3 @@
-<h1>Summer#xia</h1>
-<p>Find me in app/views/summer/xia.html.erb</p>
-
+<h1>Goodbye</h1>
+<p>Welcome to come next time,bye</p>
+<a href="/greetings/hello">back</a>
